--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <header>
         <div class="nav container">
@@ -19,23 +21,26 @@
                 <h2 class="cart-title">Your Cart</h2>
                 <div class="cart-content">
                     <div class="cart-box">
-                        <div class="cart-product-title">Earbuds</div>
-                        <div class="cart-price">$25</div>
-                        <input type="number" value="1" class="cart-quantity">
+                        <img class="cart-img" src="images/product2.jpg" alt="product2">
+                        <div class="detail-box">
+                            <div class="cart-product-title">Earbuds</div>
+                            <div class="cart-price">$25</div>
+                            <input type="number" value="1" class="cart-quantity">
+                        </div>
+                        <!-- Remove Cart -->
+                        <i class="bx bxs-trash-alt cart-remove"></i>
                     </div>
-                    <!-- Remove Cart -->
-                    <i class="bx bxs-trash-alt cart-remove"></i>
                 </div>
+                <!-- Total -->
+                <div class="total">
+                    <div class="total-title">Total</div>
+                    <div class="total-price">$0</div>
+                </div>
+                <!-- Buy Button -->
+                <button type="button" class="btn-buy">Buy Now</button>
+                <!-- Cart Close -->
+                <i class="bx bx-x" id="close-cart"></i>
             </div>
-            <!-- Total -->
-            <div class="total">
-                <div class="total-title">Total</div>
-                <div class="total-price">$0</div>
-            </div>
-            <!-- Buy Button -->
-            <button type="button" class="btn-buy">Buy Now</button>
-            <!-- Cart Close -->
-            <i class="bx bx-x" id="close-cart"></i>
         </div>
     </header>
     <!-- Shop -->
@@ -96,4 +101,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
