--- a/index.html
+++ b/index.html
@@ -20,16 +20,6 @@
             <div class="cart">
                 <h2 class="cart-title">Your Cart</h2>
                 <div class="cart-content">
-                    <div class="cart-box">
-                        <img class="cart-img" src="images/product2.jpg" alt="product2">
-                        <div class="detail-box">
-                            <div class="cart-product-title">Earbuds</div>
-                            <div class="cart-price">$25</div>
-                            <input type="number" value="1" class="cart-quantity">
-                        </div>
-                        <!-- Remove Cart -->
-                        <i class="bx bxs-trash-alt cart-remove"></i>
-                    </div>
                 </div>
                 <!-- Total -->
                 <div class="total">
@@ -49,49 +39,49 @@
         <!-- Content -->
         <div class="shop-content">
             <div class="product-box">
-                <img src="images/product1.jpg" alt="product1">
+                <img src="images/product1.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">AREYOUREADY SHIRT</h2>
                 <span class="price">$25</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
             </div>
             <div class="product-box">
-                <img src="images/product2.jpg" alt="product1">
+                <img src="images/product2.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">WIRELESS EARBUDS</h2>
                 <span class="price">$11</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
             </div>
             <div class="product-box">
-                <img src="images/product3.jpg" alt="product1">
+                <img src="images/product3.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">HOODED PARKA</h2>
                 <span class="price">$17</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
             </div>
             <div class="product-box">
-                <img src="images/product4.jpg" alt="product1">
+                <img src="images/product4.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">STRAW METAL BOTTLE</h2>
                 <span class="price">$25</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
             </div>
             <div class="product-box">
-                <img src="images/product5.jpg" alt="product1">
+                <img src="images/product5.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">SILVER METAL</h2>
                 <span class="price">$67</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
             </div>
             <div class="product-box">
-                <img src="images/product6.jpg" alt="product1">
+                <img src="images/product6.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">BACK HAT</h2>
                 <span class="price">$18</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
             </div>
             <div class="product-box">
-                <img src="images/product7.jpg" alt="product1">
+                <img src="images/product7.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">BACKPACK</h2>
                 <span class="price">$125</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
             </div>
             <div class="product-box">
-                <img src="images/product8.jpg" alt="product1">
+                <img src="images/product8.jpg" alt="product1" class="product-img">
                 <h2 class="product-title">ULTRABOOST 22</h2>
                 <span class="price">$250</span>
                 <i class="bx bx-shopping-bag add-cart"></i>
